# tee-replication

./: README.md
cr/: Makefile  common.hpp  config.h  head  head.cpp  middle  middle.cpp  tail  tail.cpp
cr/net/: shared.h
network/: main.cc
network-unused/: CMakeLists.txt  README.md  common.h  make.sh  msg.h.bak  run.sh
network-unused/authenticators/: apis.h  authenticator.h
network-unused/net_sgx/: authenticator.h  shared.cpp
network/net_sgx/: apis.h  shared.h
raft/: Makefile  common.hpp  config.h  crypto.hpp  follower  follower.cpp  leader  leader.cpp
raft/net/: shared.h
